[gd_scene load_steps=21 format=3 uid="uid://cq7ferurxm3cw"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_2gr8o"]
[ext_resource type="Texture2D" uid="uid://c36sghhg6rbte" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="2_qfh5k"]
[ext_resource type="Texture2D" uid="uid://bkfpwefau6g3x" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="3_20ufx"]
[ext_resource type="Texture2D" uid="uid://cdy17dxbsi0y3" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="4_da28a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gl0kj"]
atlas = ExtResource("2_qfh5k")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypq4x"]
atlas = ExtResource("2_qfh5k")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_21tf8"]
atlas = ExtResource("2_qfh5k")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q6n6"]
atlas = ExtResource("2_qfh5k")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdelv"]
atlas = ExtResource("3_20ufx")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_or4h2"]
atlas = ExtResource("3_20ufx")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewr4x"]
atlas = ExtResource("3_20ufx")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttbid"]
atlas = ExtResource("3_20ufx")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpgaw"]
atlas = ExtResource("4_da28a")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l80ej"]
atlas = ExtResource("4_da28a")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ia8"]
atlas = ExtResource("4_da28a")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_urkyc"]
atlas = ExtResource("4_da28a")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_y47p1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypq4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21tf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q6n6")
}],
"loop": false,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdelv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or4h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewr4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttbid")
}],
"loop": true,
"name": &"Idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpgaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l80ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ia8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urkyc")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hqr7g"]
radius = 192.094

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnqpy"]
size = Vector2(19, 59)

[sub_resource type="CircleShape2D" id="CircleShape2D_7a8lm"]
radius = 38.0526

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_2gr8o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -30)
scale = Vector2(1.05333, 1.14333)
sprite_frames = SubResource("SpriteFrames_y47p1")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_hqr7g")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -29.5)
shape = SubResource("RectangleShape2D_fnqpy")

[node name="Enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_hitbox"]
position = Vector2(1, -25)
shape = SubResource("CircleShape2D_7a8lm")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
